BJS2-92859 fix